# Secfi-assessment

./: Dockerfile  Makefile  README.md  pyproject.toml  tox.ini
apps/stocks/: serializers.py  urls.py  utils.py  views.py
apps/stocks/tests/: __init__.py  request_samples.py  response_samples.py  test_flow.py
config/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: run.sh
