[tool.poetry]
name = "Secfi Assessment"
version = "0.1.0"
description = "Secfi Assessment"
authors = ["Amr Galal"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "3.1.14"
djangorestframework = "3.12.2"
drf-yasg = "1.20.0"
django-rest-swagger = "2.2.0"
gunicorn = "20.1.0"
django-cors-headers = "3.10.1"
loguru = "0.5.3"
whitenoise = "5.3.0"
django-admin-logs = "1.0.2"
django-extensions = "3.1.5"
django-model-utils = "4.2.0"
flake8 = "3.9.2"
isort = "5.10.1"
autopep8 = "1.5.7"
model-bakery = "1.3.3"
coverage = "5.5"
django-environ = "0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core==1.1.7"]
build-backend = "poetry.core.masonry.api"
